# beaconwarden

./: .dev.vars.example  .gitmodules  AGENTS.md  Cargo.toml  MIGRATION_TRACKER.md  README.md  package.json  wrangler.jsonc  wrangler.workers.jsonc
crates/beaconwarden-worker/: Cargo.toml
crates/beaconwarden-worker/src/: lib.rs  wasm.rs  wasm_impl.rs  worker_wasm.rs
crates/beaconwarden-worker/src/wasm/: brevo.rs  crypto.rs  domains.rs  env.rs  http.rs  jwt.rs  mod.rs  util.rs
crates/beaconwarden-worker/src/wasm/db/: mod.rs
crates/beaconwarden-worker/src/wasm/handlers/: accounts.rs  admin.rs  admin_auth.rs  auth.rs  ciphers.rs  config.rs  devices.rs  events.rs  folders.rs  identity.rs  migrations.rs  mod.rs  organizations.rs  sends.rs  settings.rs  sync.rs
crates/entity/: Cargo.toml
crates/entity/src/: attachment.rs  auth_request.rs  cipher.rs  collection.rs  collection_cipher.rs  collection_group.rs  collection_user.rs  device.rs  emergency_access.rs  event.rs  favorite.rs  folder.rs  folder_cipher.rs  group.rs  group_user.rs  invitation.rs  lib.rs  membership.rs  org_policy.rs  organization.rs  organization_api_key.rs  register_verification.rs  send.rs  server_secret.rs  sso_auth.rs  sso_user.rs  two_factor.rs  two_factor_duo_ctx.rs  two_factor_incomplete.rs  user.rs
crates/migration/: Cargo.toml
crates/migration/src/: lib.rs  m20260128_000001_init.rs  m20260128_000002_core_tables.rs  m20260128_000003_auth_fields.rs  m20260129_000004_register_verifications.rs  m20260129_000005_fix_users_akey_column.rs  m20260129_000006_server_secrets.rs  m20260130_000007_favorites_and_domains.rs  m20260130_000008_more_entities.rs  m20260130_000009_user_compat_columns.rs  m20260130_000010_org_core_tables.rs  m20260130_000011_groups_tables.rs  m20260130_000012_attachments_and_sends.rs  m20260130_000012_misc_tables.rs  m20260130_000013_two_factor_tables.rs  m20260130_000014_sso_tables.rs  m20260130_000015_emergency_access_and_events.rs  m20260130_000016_auth_requests_and_invitations.rs
docs/: DB_SCHEMA_STRATEGY.md  DEVELOPMENT.md  Vaultwarden_API_Endpoints_Extracted.md
tools/: extract_rocket_endpoints.py
(+2 files in other folders)
