[package]
name = "entity"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "entity"
path = "src/lib.rs"

[dependencies]
# Summpot fork with libsql support.
sea-orm = { git = "https://github.com/Summpot/sea-orm.git", branch = "libsql", default-features = false, features = ["macros"] }
serde = { version = "1.0", features = ["derive"] }
